--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "my-v0-project",
   "version": "0.1.0",
+  "engines": {
+    "node": ">=20 <=22"
+  },
   "private": true,
   "scripts": {
     "build": "next build",
@@ -55,6 +58,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
+    "styled-jsx": "^5.1.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
