--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start",
+    "optimize:logo": "node scripts/optimize-logo.mjs",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -78,6 +81,7 @@
     "eslint-plugin-unused-imports": "^4.3.0",
     "postcss": "^8.5",
     "prettier": "^3.6.2",
+    "sharp": "^0.33.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
