--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,38 +2,41 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [20]
-
+    timeout-minutes: 15
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Use Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '20'
           cache: 'pnpm'
 
-      - name: Install pnpm
-        run: corepack enable && corepack prepare pnpm@latest --activate
+      - name: Enable Corepack
+        run: corepack enable
+
+      - name: Use pnpm 10.14.0
+        run: corepack prepare pnpm@10.14.0 --activate
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
-      - name: Run TypeScript check
+      - name: Type check
         run: pnpm exec tsc --noEmit
 
-      - name: Run ESLint
-        run: pnpm run lint -- --max-warnings=0 || true
+      - name: Lint
+        run: pnpm run lint -- --max-warnings=0
 
       - name: Build
         run: pnpm run build
+
+      - name: Done
+        run: echo "CI succeeded"
